Updates to get rid of warnings. Also fixes vertical spacing

--- a/_sass/partials/_nav.scss
+++ b/_sass/partials/_nav.scss
@@ -285,7 +285,7 @@ header.navigation {
       position: relative;
 
       input[type=search] {
-        @include box-sizing(border-box);
+        box-sizing: border-box;
         background: $navigation-search-background;
         border-radius: $base-border-radius * 2;
         border: $navigation-search-border;
@@ -326,7 +326,7 @@ header.navigation {
       width: 16em;
 
       input {
-        @include box-sizing(border-box);
+        box-sizing: border-box;
         display: block;
       }
     }
